--- a/MobileApp_C971_LAP2_PaulMilke/AppShell.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title="Terms"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
