Improves the binding process for TermTile from MainPageViewModel.
Properly shows the title name and now includes borders and other visual enhancements.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
@@ -1,29 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage x:Name="mainPageInstance"
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Controls"
              x:Class="MobileApp_C971_LAP2_PaulMilke.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
-
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
-    </ScrollView>
+    <ContentPage.Content>
+        <CollectionView ItemsSource="{Binding TermList}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <local:TermTile Title="{Binding Title}" 
+                                    TileCommand="{Binding Source={x:Reference mainPageInstance}, Path=BindingContext.NavigateToCoursesCommand}"/>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </ContentPage.Content>
 
 </ContentPage>
