--- a/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
@@ -3,17 +3,25 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Controls"
+             xmlns:mct="clr-namespace:CommunityToolkit.Maui.Core.Views;assembly=CommunityToolkit.Maui.Core"
              x:Class="MobileApp_C971_LAP2_PaulMilke.MainPage">
 
     <ContentPage.Content>
-        <CollectionView ItemsSource="{Binding TermList}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <local:TermTile Title="{Binding Title}" 
-                                    TileCommand="{Binding Source={x:Reference mainPageInstance}, Path=BindingContext.NavigateToCoursesCommand}"/>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+        <StackLayout>
+            <CollectionView ItemsSource="{Binding TermList}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <local:TermTile TermData="{Binding TermData}" 
+                                         TileCommand="{Binding Source={x:Reference mainPageInstance}, Path=BindingContext.NavigateToCoursesCommand}"/>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Button Text="Add New Term"
+                    VerticalOptions="End"
+                    Margin="10"
+                    Clicked="OnAddClicked"/>
+        </StackLayout>
     </ContentPage.Content>
 
 </ContentPage>
