Finishes the features for part B1.
You can now add, edit, and delete different terms
from the main page of the application.
I utilized the "add term" page for the editing of each term as well.
That way I didn't not have to create redundant code.
This also includes new files to use the weak message references so I can
notify other parts of the app when certain methods are finished.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/AddNewTermPopup.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AddNewTermPopup.xaml
@@ -41,7 +41,8 @@
         <Button Text="Add Term" 
                 Margin="20"
                 Padding="10"
-                Command="{Binding AddTermCommand}"/>
+                Command="{Binding AddTermCommand}"
+                Clicked="AddButtonClicked"/>
 
     </VerticalStackLayout>
 </mct:Popup>
