--- a/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
@@ -7,8 +7,14 @@
              x:Class="MobileApp_C971_LAP2_PaulMilke.MainPage">
 
     <ContentPage.Content>
-        <StackLayout>
-            <CollectionView ItemsSource="{Binding TermList}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            
+            <CollectionView Grid.Row="0" ItemsSource="{Binding TermList}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <local:TermTile TermData="{Binding TermData}" 
@@ -16,12 +22,14 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-
+        
+        
             <Button Text="Add New Term"
                     VerticalOptions="End"
                     Margin="10"
-                    Clicked="OnAddClicked"/>
-        </StackLayout>
+                    Clicked="OnAddClicked"
+                    Grid.Row="1"/>
+        </Grid>
     </ContentPage.Content>
 
 </ContentPage>
