--- a/MobileApp_C971_LAP2_PaulMilke/Views/CoursesPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/CoursesPage.xaml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage x:Name="coursePageInstance"
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Models"
              x:Class="MobileApp_C971_LAP2_PaulMilke.CoursesPage"
-             Title="CoursesPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Courses">
+
+    <ContentPage.Content>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <CollectionView Grid.Row="0" ItemsSource="{Binding ClassList}">
+                <CollectionView.ItemTemplate>
+                     <DataTemplate>
+                         <local:ClassTile ClassData="{Binding ClassData}"
+                                          ClassTileCommand="{Binding Source={x:Reference coursePageInstance}, Path=BindingContext.NavigateToEditCourseCommand}"/>
+                     </DataTemplate>
+                </CollectionView.ItemTemplate>
+             </CollectionView>
+
+            <Button Grid.Row="1" Grid.Column="0"
+                    Text="Add Class"
+                    IsEnabled="{Binding IsEnabled}"
+                    Command="{Binding CreateNewClassCommand}"
+                    Margin="10,10,10,5"/>
+
+            <Label Grid.Row="2"
+                   Text="Maximum number of 6 classes."
+                   IsVisible="{Binding IsVisible}"
+                   FontSize="8"
+                   TextColor="DarkSlateGrey"
+                   HorizontalTextAlignment="Center"
+                   Margin="0,0,0,5"
+                   FontAttributes="Bold"/>
+        </Grid>
+    </ContentPage.Content>
+    
 </ContentPage>
