--- a/MobileApp_C971_LAP2_PaulMilke/Views/EditCoursePage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/EditCoursePage.xaml
@@ -8,10 +8,25 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <Style x:Key="labelStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="10,10,10,0"/>
+            </Style>
+            <Style x:Key="infoLabel" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="10,2,10,0"/>
+            </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
+        <ScrollView>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -34,109 +49,212 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                 <RowDefinition Height="Auto" />
+
+                </Grid.RowDefinitions>
 
             <!-- Titles -->
-            <Label Grid.Row="0" Grid.Column="0"
-                   Text="Class Title"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5,5,5,0"/>
-            
-            <Label Grid.Row="2" Grid.Column="0"
-                   Text="Start Date"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
-            
-            <Label Grid.Row="4" Grid.Column="0"
-                   Text="End Date"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
+                <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource labelStyle}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Class Title" TextDecorations="Underline"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
 
-            <Label Grid.Row="6" Grid.Column="0"
-                   Text="Status"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
-            
-            <Label Grid.Row="8" Grid.Column="0"
-                   Text="Instructor's Details"
-                   FontAttributes="Bold"
-                   FontSize="14"
-                   Margin="5"/>
+                <Grid Grid.Row="2" Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="9" Grid.Column="0"
-                   Text="Name"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
+                    <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource labelStyle}">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Start Date" TextDecorations="Underline"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
 
-            <Label Grid.Row="11" Grid.Column="0"
-                   Text="Email"
-                   FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
+                    <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource labelStyle}">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="End Date" TextDecorations="Underline"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
 
-            <Label Grid.Row="13" Grid.Column="0"
-                   Text="Phone"
+                    <Label Grid.Row="1" Grid.Column="0"
+                   Text="{Binding Start, StringFormat='{0:MM/dd/yyy}'}" 
+                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"  
+                   Style="{StaticResource infoLabel}"/>
+
+                    <Label Grid.Row="1" Grid.Column="1"
+                   Text="{Binding End, StringFormat='{0:MM/dd/yyy}'}" 
+                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
+                   Style="{StaticResource infoLabel}"/>
+
+                    <DatePicker Grid.Row="1" Grid.Column="0"
+                        Date="{Binding Start, Mode=TwoWay}"
+                        IsVisible="{Binding IsEditing}"
+                        FontSize="15" 
+                        Margin="5"/>
+
+                    <DatePicker Grid.Row="1" Grid.Column="1"
+                        Date="{Binding End, Mode=TwoWay}"
+                        IsVisible="{Binding IsEditing}"
+                        FontSize="15" 
+                        Margin="5"/>
+
+                    <Label Grid.Row="0" Grid.Column="2" Style="{StaticResource labelStyle}">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Status" TextDecorations="Underline"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+
+                    <Label Grid.Row="1" Grid.Column="2"
+                   Text="{Binding Status}"
+                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
+                   Style="{StaticResource infoLabel}"/>
+                </Grid>
+
+
+                <Label Grid.Row="8" Grid.Column="0"
+                   Text="Instructor's Details:"
+                   HorizontalTextAlignment="Center"
                    FontAttributes="Bold"
-                   FontSize="12"
-                   Margin="5"/>
+                   FontSize="20"
+                   Margin="10,25,10,10"/>
+
+                <Label Grid.Row="9" Grid.Column="0" Style="{StaticResource labelStyle}" Margin="10,0">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Name" TextDecorations="Underline"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                    
+                </Label>
+
+                <Label Grid.Row="11" Grid.Column="0" Style="{StaticResource labelStyle}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Email" TextDecorations="Underline"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+
+                <Label Grid.Row="13" Grid.Column="0" Style="{StaticResource labelStyle}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Phone" TextDecorations="Underline"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+
+
+                <Grid Grid.Row="15" Grid.Column="0" Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <Label Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="End" Margin="0,0,0,0">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Notes" TextDecorations="Underline"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+
+                    <ImageButton Grid.Row="0" Grid.Column="1"
+                                 Command="{Binding ShareNotesCommand}"
+                                 Margin="0"
+                                 HorizontalOptions="Start"
+                                 Source="shareicon.png"
+                                 HeightRequest="20"/>
+                    
+                </Grid>
+
             
 
             <!-- View Mode -->
-            <Label Grid.Row="1" Grid.Column="0" 
+                <Label Grid.Row="1" Grid.Column="0" 
                    Text="{Binding CourseName}"
                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
-                   FontSize="15" 
-                   FontAttributes="Bold"
-                   Margin="5,2,5,2"/>
-            
-            <Label Grid.Row="3" Grid.Column="0"
-                   Text="{Binding Start, StringFormat='{0:MM/dd/yyy}'}" 
-                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"  
-                   FontSize="15" 
-                   Margin="5"/>
+                   Style="{StaticResource infoLabel}"/>
 
-            <Label Grid.Row="5" Grid.Column="0"
-                   Text="{Binding End, StringFormat='{0:MM/dd/yyy}'}" 
-                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
-                   FontSize="15" 
-                   Margin="5"/>
-
-            <Label Grid.Row="7" Grid.Column="0"
-                   Text="{Binding Status}"
-                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
-                   FontSize="15"
-                   Margin="5"/>
 
             <Label Grid.Row="10" Grid.Column="0"
                    Text="{Binding InstructorName}"
                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
-                   FontSize="15"
-                   Margin="5"/>
+                   Style="{StaticResource infoLabel}"/>
 
             <Label Grid.Row="12" Grid.Column="0"
                    Text="{Binding InstructorEmail}"
                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
-                   FontSize="15"
-                   Margin="5"/>
+                   Style="{StaticResource infoLabel}"/>
 
             <Label Grid.Row="14" Grid.Column="0"
                    Text="{Binding InstructorPhone}"
                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
-                   FontSize="15"
-                   Margin="5"/>
+                   Style="{StaticResource infoLabel}"/>
 
-            <Button Grid.Row="15" Grid.Column="0"
+            <Editor Grid.Row="16" Grid.Column="0"
+                   Text="{Binding ClassNotes}"
+                   IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"
+                   IsReadOnly="True"
+                   AutoSize="TextChanges"
+                   FontSize="12"
+                   Margin="5,0,5,5"/>
+
+                <Button Grid.Row="17" Grid.Column="0"
                     Text="Edit"
                     IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
                     Command="{Binding ToggleEditCommand}"
-                    Margin="5"/>
+                    FontSize="12"
+                    Padding="0"
+                    Margin="2"/>
 
-            <Button Grid.Row="16" Grid.Column="0"
+                <Grid Grid.Row="18" Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+
+                    <Button Grid.Row="0" Grid.Column="0"
+                    Text="Add Performance Assessment"
+                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
+                    FontSize="12"
+                    LineBreakMode="WordWrap"
+                    Padding="0"
+                    Margin="2"/>
+
+                    <Button Grid.Row="0" Grid.Column="1"
+                    Text="Add Objective Assessment"
+                    IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
+                    FontSize="12"
+                    LineBreakMode="WordWrap"
+                    Padding="0"
+                    Margin="2"/>
+
+                </Grid>
+
+
+                <Button Grid.Row="19" Grid.Column="0"
                     Text="Delete"
                     Margin="5"
                     BackgroundColor="DarkRed"
@@ -144,25 +262,13 @@
                     IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}"/>
 
             <!-- Edit Mode -->
-            <Entry Grid.Row="1" Grid.Column="0"
+                <Entry Grid.Row="1" Grid.Column="0"
                    Text="{Binding CourseName, Mode=TwoWay}"
                    IsVisible="{Binding IsEditing}"
                    FontSize="15" 
                    Margin="5"/>
 
-            <DatePicker Grid.Row="3" Grid.Column="0"
-                        Date="{Binding Start, Mode=TwoWay}"
-                        IsVisible="{Binding IsEditing}"
-                        FontSize="15" 
-                        Margin="5"/>
-
-            <DatePicker Grid.Row="5" Grid.Column="0"
-                        Date="{Binding End, Mode=TwoWay}"
-                        IsVisible="{Binding IsEditing}"
-                        FontSize="15" 
-                        Margin="5"/>
-
-            <Picker Grid.Row="7" Grid.Column="0"
+                <Picker Grid.Row="7" Grid.Column="0"
                     x:Name="statusPicker"
                     Title="Select Class Status"
                     SelectedItem="{Binding Status, Mode=TwoWay}"
@@ -194,14 +300,22 @@
                    IsVisible="{Binding IsEditing}"
                    FontSize="15" 
                    Margin="5"/>
+            
+            <Editor Grid.Row="16" Grid.Column="0"
+                    Text="{Binding ClassNotes, Mode=TwoWay}"
+                    IsVisible="{Binding IsEditing}"
+                    AutoSize="TextChanges"
+                    FontSize="12" 
+                    Margin="5"/>
 
-            <Button Grid.Row="15" Grid.Column="0"
+            <Button Grid.Row="17" Grid.Column="0"
                     Text="Save"
                     IsVisible="{Binding IsEditing}" 
                     Command="{Binding UpdateClassCommand}"
                     Margin="5"/>
 
         </Grid>
+        </ScrollView>
     </ContentPage.Content>
 
 </ContentPage>
