Adds multiple infrastructure items around assessments.
Includes new table for assessments. Updates to navigation to allow information to pass to
the add/edit assessment page. Includes new xaml to handle adding assessments.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/EditCoursePage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/EditCoursePage.xaml
@@ -238,6 +238,7 @@
                     <Button Grid.Row="0" Grid.Column="0"
                     Text="Add Performance Assessment"
                     IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
+                    Command="{Binding NavigateToPerformanceAssessment}"
                     FontSize="12"
                     LineBreakMode="WordWrap"
                     Padding="0"
@@ -246,6 +247,7 @@
                     <Button Grid.Row="0" Grid.Column="1"
                     Text="Add Objective Assessment"
                     IsVisible="{Binding IsEditing, Converter={StaticResource InverseBooleanConverter}}" 
+                    Command="{Binding NavigateToObjectiveAssessment}"
                     FontSize="12"
                     LineBreakMode="WordWrap"
                     Padding="0"
