Finishes the features for part C5.
This includes the ability to edit and add Assessments. Along with the notifications for start and end dates for each assessment.
The next commit will include the ability to delete an assessment from a course.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
@@ -35,6 +35,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -105,12 +106,17 @@
                 </Grid>
 
                 <Button Grid.Row="5" Grid.Column="0"
-                        Text="Add New Assessment"
+                        Text="Save Assessment"
                         Margin="5"
                         IsVisible="{Binding IsAdding}"
                         Command="{Binding AddAssessmentCommand}"/>
 
+                <Button Grid.Row="5" Grid.Column="0"
+                        Text="Edit Assessment"
+                        Margin="5"
+                        IsVisible="{Binding IsAdding, Converter={StaticResource InverseBooleanConverter}}"
+                        Command="{Binding EditAssessmentCommand}"/>
             </Grid>
-    </ScrollView>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
