Finishes the ability to delete assessments from a course.
This in turn finishes the items for part C5.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
@@ -116,6 +116,13 @@
                         Margin="5"
                         IsVisible="{Binding IsAdding, Converter={StaticResource InverseBooleanConverter}}"
                         Command="{Binding EditAssessmentCommand}"/>
+
+                <Button Grid.Row="6" Grid.Column="0"
+                        Text="Delete Assessment"
+                        Margin="5"
+                        BackgroundColor="DarkRed"
+                        IsVisible="{Binding IsAdding, Converter={StaticResource InverseBooleanConverter}}"
+                        Command="{Binding DeleteAssessmentCommand}"/>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
