--- a/MobileApp_C971_LAP2_PaulMilke/Views/AddNewTermPopup.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AddNewTermPopup.xaml
@@ -4,45 +4,105 @@
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
              x:Class="MobileApp_C971_LAP2_PaulMilke.Views.AddNewTermPopup"
              CanBeDismissedByTappingOutsideOfPopup="True">
-    <VerticalStackLayout WidthRequest="300" HeightRequest="400" Padding="20">
-        <Label 
+    
+    
+    <VerticalStackLayout WidthRequest="300" Padding="20">
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <Label Grid.Row="0" Grid.Column="0"
             Text="Add a New Term"
+            FontSize="15"
+            FontAttributes="Bold"
             VerticalOptions="Center" 
             HorizontalOptions="Center"/>
-        <HorizontalStackLayout>
-            <Label Text="Term Title"
-                   TextColor="Black"
-                   VerticalOptions="CenterAndExpand"/>
-            <Entry x:Name="TermTitle"
+
+            <Entry Grid.Row="1" Grid.Column="0" 
+                    x:Name="TermTitle"
                    Text="{Binding TitleText}"
                    Placeholder="Enter a title"
                    PlaceholderColor="Black"
                    TextColor="Black"
-                   VerticalOptions="CenterAndExpand"
-                   HorizontalOptions="End"/>
-        </HorizontalStackLayout>
-        <HorizontalStackLayout>
-            <Label Text="Start Date"
-                   VerticalOptions="CenterAndExpand"/>
-            <DatePicker 
+                   HorizontalOptions="Center"
+                   Margin="20,5,20,20"/>
+
+            <Grid Grid.Row="2" Grid.Column="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0"
+                   Text="Start Date"
+                   FontSize="13"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Center"
+                       Margin="5,5,5,0"/>
+                
+                <DatePicker Grid.Row="1" Grid.Column="0"
                     Date="{Binding StartDate}"    
-                    MinimumDate="01/01/2022"
-                    MaximumDate="01/01/2025"
-                    VerticalOptions="CenterAndExpand"/>
-        </HorizontalStackLayout>
-        <HorizontalStackLayout>
-            <Label Text="End Date"/>
-            <DatePicker 
+                    MinimumDate="{Binding MinDate}"
+                    MaximumDate="{Binding MaxDate}"
+                    FontSize="13"
+                   FontAttributes="Bold"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="Center"
+                            Margin="5,0,5,5"/>
+
+                <Label Grid.Row="0" Grid.Column="1"
+                    Text="End Date"
+                   FontSize="13"
+                   FontAttributes="Bold"
+                    HorizontalOptions="Center"
+                       Margin="5,5,5,0"/>
+                
+                <DatePicker Grid.Row="1" Grid.Column="1"
                     Date="{Binding EndDate}"
-                    MinimumDate="01/01/2022"
-                    MaximumDate="01/01/2025"
-                    VerticalOptions="CenterAndExpand"/>
-        </HorizontalStackLayout>
-        <Button Text="Add Term" 
-                Margin="20"
-                Padding="10"
-                Command="{Binding AddTermCommand}"
-                Clicked="AddButtonClicked"/>
+                    MinimumDate="{Binding MinDate}"
+                    MaximumDate="{Binding MaxDate}"
+                    FontSize="13"
+                   FontAttributes="Bold"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="Center"
+                            Margin="5,0,5,5"/>
+
+            </Grid>
+            <Button Grid.Row="3" Grid.Column="0"
+                    Text="Add Term" 
+                    Margin="20,15,20,0"
+                    Padding="10"
+                    Command="{Binding AddTermCommand}"
+                    Clicked="AddButtonClicked"/>
+
+            <Button Grid.Row="4" Grid.Column="0"
+                    Text="Nevermind"
+                    Margin="0"
+                    Padding="0"
+                    FontSize="10"
+                    FontAttributes="Bold"
+                    TextColor="Black"
+                    BorderColor="Black"
+                    BackgroundColor="Transparent"
+                    Clicked="AddButtonClicked"/>
+        </Grid>
+
+
 
     </VerticalStackLayout>
+
+
 </mct:Popup>
