Includes polish work to refine current functionality.
Includes validation for all inputs on term, class, and assessments.
Updates data on Courses page to show more term info.
Includes navigateback after deleting assessment.

--- a/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
@@ -84,7 +84,7 @@
                            Style="{StaticResource labelStyle}"/>
 
                     <Label Grid.Row="1" Grid.Column="0"
-                           Text="{Binding StartDate}"
+                           Text="{Binding StartDate, StringFormat='{0:MM/dd/yyy}'}"
                            Style="{StaticResource infoLabel}"
                            IsVisible="{Binding IsAdding, Converter={StaticResource InverseBooleanConverter}}"/>
 
@@ -94,7 +94,7 @@
                            Style="{StaticResource infoLabel}"/>
 
                     <Label Grid.Row="1" Grid.Column="1"
-                           Text="{Binding EndDate}"
+                           Text="{Binding EndDate, StringFormat='{0:MM/dd/yyy}'}"
                            Style="{StaticResource infoLabel}"
                            IsVisible="{Binding IsAdding, Converter={StaticResource InverseBooleanConverter}}"/>
 
