--- a/MobileApp_C971_LAP2_PaulMilke/Views/CoursesPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/CoursesPage.xaml
@@ -4,17 +4,79 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Models"
              x:Class="MobileApp_C971_LAP2_PaulMilke.CoursesPage"
-             Title="Courses">
+             Title="{Binding TermTitle}">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <Style x:Key="labelStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="10,10,10,0"/>
+            </Style>
+            <Style x:Key="infoLabel" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="10,2,10,0"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
 
     <ContentPage.Content>
         <Grid>
+
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <CollectionView Grid.Row="0" ItemsSource="{Binding ClassList}">
+            <Grid Grid.Row="0" Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+
+                <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource labelStyle}">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Start Date" TextDecorations="Underline"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+                <Label Grid.Row="1" Grid.Column="0"
+                   Text="{Binding TermStart, StringFormat='{0:MM/dd/yyy}'}" 
+                   Style="{StaticResource infoLabel}"/>
+
+                <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource labelStyle}">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="End Date" TextDecorations="Underline"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+                <Label Grid.Row="1" Grid.Column="1"
+                   Text="{Binding TermEnd, StringFormat='{0:MM/dd/yyy}'}" 
+                   Style="{StaticResource infoLabel}"/>
+
+
+            </Grid>
+
+
+            <CollectionView Grid.Row="1" ItemsSource="{Binding ClassList}">
                 <CollectionView.ItemTemplate>
                      <DataTemplate>
                          <local:ClassTile ClassData="{Binding ClassData}"
@@ -23,13 +85,13 @@
                 </CollectionView.ItemTemplate>
              </CollectionView>
 
-            <Button Grid.Row="1" Grid.Column="0"
+            <Button Grid.Row="2" Grid.Column="0"
                     Text="Add Class"
                     IsEnabled="{Binding IsEnabled}"
                     Command="{Binding CreateNewClassCommand}"
                     Margin="10,10,10,5"/>
 
-            <Label Grid.Row="2"
+            <Label Grid.Row="3"
                    Text="Maximum number of 6 classes."
                    IsVisible="{Binding IsVisible}"
                    FontSize="8"
