--- a/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/AssessmentEditAdd.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Models"
              x:Class="MobileApp_C971_LAP2_PaulMilke.Views.AssessmentEditAdd"
-             Title="AssessmentEditAdd">
+             Title="{Binding AssessmentType}">
 
     <ContentPage.Resources>
         <ResourceDictionary>
