--- a/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
@@ -2,10 +2,17 @@
 <ContentPage x:Name="mainPageInstance"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Controls"
+             xmlns:local="clr-namespace:MobileApp_C971_LAP2_PaulMilke.Models"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Core.Views;assembly=CommunityToolkit.Maui.Core"
              x:Class="MobileApp_C971_LAP2_PaulMilke.MainPage">
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Reports"
+                     Command="{Binding Source={x:Reference mainPageInstance}, Path=BindingContext.NavigatetoReportsCommand}"/>
+        <ToolbarItem Text="Search"
+                     Command="{Binding NavigateToSearchCommand}"/>
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
