--- a/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
+++ b/MobileApp_C971_LAP2_PaulMilke/Views/MainPage.xaml
@@ -8,7 +8,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Reports"
-                     Command="{Binding Source={x:Reference mainPageInstance}, Path=BindingContext.NavigatetoReportsCommand}"/>
+                     Command="{Binding NavigateToReportsCommand}"/>
         <ToolbarItem Text="Search"
                      Command="{Binding NavigateToSearchCommand}"/>
     </ContentPage.ToolbarItems>
